# ai-slop-detector

./: .env.example  .gitignore  .pre-commit-config.yaml  GEMINI.md  LICENSE  Makefile  README.md  SECURITY.md  STATUS.md  decisions.md  mkdocs.yml  mypy.ini  progress.md  pyproject.toml  requirements.txt
.github/workflows/: main.yml
benchmarks/: RAID.md
deploy/: Dockerfile
docs/: api.md  cli.md  contributing.md  index.md
src/: batch_test.py  consolidate_dataset.py  crawler.py  download_raid.py  download_raid_fast.py  gemini_generator.py  predict.py  train_model.py
src/api/: main.py
src/core/: config.py  engine.py  inference.py
src/slopguard/api/: main.py
src/slopguard/cli/: batch_test.py  consolidate_dataset.py  crawler.py  download_raid.py  gemini_generator.py  main.py  predict.py  train_model.py
src/slopguard/core/: config.py  engine.py
tests/: conftest.py  test_api.py  test_basic.py  test_cli.py  test_core.py  test_predict.py  test_train.py
