[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "slopguard"
version = "1.0.0"
description = "A high-fidelity machine learning suite for detecting AI-generated 'slop' across multi-domain datasets."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Mainak Biswas", email = "mainakbiswas22@gmail.com"}
]
dependencies = [
    # API Layer (Enterprise)
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "slowapi>=0.1.8",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",

    # ML Infrastructure
    "torch>=2.1.0",
    "transformers>=4.35.0",
    "peft>=0.6.0",
    "accelerate>=0.24.0",
    "evaluate>=0.4.0",
    "scikit-learn>=1.3.0",

    # Core Dependencies
    "httpx>=0.25.0",
    "beautifulsoup4>=4.12.0",
    "tqdm>=4.66.0",
    "pandas>=2.1.0",
    "google-generativeai>=0.3.0",
    "python-dotenv>=1.0.0",
    "datasets>=2.15.0",
    "typer>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.5",
    "mypy>=1.7.0",
    "bandit>=1.7.5",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pre-commit>=3.5.0",
]

[project.scripts]
slopguard = "slopguard.cli.main:app"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "B", "I"]
ignore = ["E501"] # Line too long (handled by line-length)

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "--cov=slopguard --cov-report=term-missing"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = [
    "torch.*",
    "transformers.*",
    "peft.*",
    "evaluate.*",
    "scikit-learn.*",
    "bs4.*",
    "tqdm.*",
    "google.generativeai.*",
    "datasets.*",
    "pandas.*",
    "pydantic_settings.*",
    "numpy.*",
    "google.*",
    "httpx.*",
    "typer.*",
    "slowapi.*",
    "uvicorn.*"
]
ignore_missing_imports = true

[tool.bandit]
exclude_dirs = ["tests", "venv", ".venv"]
skips = ["B101"]
